i18n/ja/docusaurus-plugin-content-docs/current/references/sdk/ethers-ext/v6/account-management/sign-message/multisig-recover-msg.mdx
# マルチシグ・アカウント・キー

import { RoutePath } from '@site/src/common/codesandbox'
import Editor from '@site/src/components/Editor'

<Editor module="/src/pages/ethers-ext-v6/SignMessage/AccountKeyWeightedMultiSig.tsx" route={RoutePath.EthersExt_SignMsg_MultiSig} />

**AccountKeyWeightedMultiSig**は、閾値とWeightedPublicKeys（公開鍵とその重みからなるリスト）を含むアカウント鍵タイプである。

**AccountKeyWeightedMultiSig**に関連付けられたアカウントで取引が有効であるためには、 以下の条件を満たす必要がある：
署名された公開鍵の加重和が閾値より大きいこと。
無効な署名はトランザクションに含めるべきでない。 \* 署名された公開鍵の数は、weightedPublicKeysの数より少なくなければならない。

<CH.Spotlight>
  <CH.Code>
    ```js SignMsgWithMultiSigExample.js
    const { ethers } = require("ethers");

    const { Wallet } = require("@kaiachain/ethers-ext/v6");

    const senderAddr = "0x82c6a8d94993d49cfd0c1d30f0f8caa65782cc7e";
    const senderPriv = "0xa32c30608667d43be2d652bede413f12a649dd1be93440878e7f712d51a6768a";
    const senderNewPriv1 = "0xa32c30608667d43be2d652bede413f12a649dd1be93440878e7f712d51a6768a";
    const senderNewPriv2 = "0x0e4ca6d38096ad99324de0dde108587e5d7c600165ae4cd6c2462c597458c2b8";
    const senderNewPriv3 = "0xc9668ccd35fc20587aa37a48838b48ccc13cf14dd74c8999dd6a480212d5f7ac";

    const provider = new ethers.JsonRpcProvider("https://public-en-kairos.node.kaia.io");
    const wallet1 = new Wallet(senderAddr, senderNewPriv1, provider);
    const wallet2 = new Wallet(senderAddr, senderNewPriv2, provider);
    const wallet3 = new Wallet(senderAddr, senderNewPriv3, provider);

    async function main() {
      const msg = "hello";
      const msghex = ethers.hexlify(ethers.toUtf8Bytes(msg));
      const sig = await wallet3.signMessage(msg);
      console.log({ senderAddr, msg, msghex, sig });

      const addr1 = ethers.verifyMessage(msg, sig);
      console.log("recoveredAddr lib", addr1, addr1.toLowerCase() === wallet3.address.toLowerCase());

      const addr2 = await provider.send("klay_recoverFromMessage", [senderAddr, msghex, sig, "latest"]);
      console.log("recoveredAddr rpc", addr2, addr2.toLowerCase() === wallet3.address.toLowerCase());
    }

    main().catch(console.error);
    ```

    ---

    ```zsh output
    js SignMsgWithMultiSigExample.js
    {
      senderAddr: '0x82c6a8d94993d49cfd0c1d30f0f8caa65782cc7e',
      msg: 'hello',
      msghex: '0x68656c6c6f',
      sig：'0x4bb3156dfd3349b974222b9ed754a3835802d920b63e8c07f41a75a174ce99d92a70d62e7a4b30d18599de61a882c59c0fd726883e3ce9955f8d5f60ce5b65211c'
    }
    recoveredAddr lib 0xe15Cd70A41dfb05e7214004d7D054801b2a2f06b true
    recoveredAddr rpc 0xe15cd70a41dfb05e7214004d7d054801b2a2f06b true
    ```
  </CH.Code>

  ---

  ethers.jsにkaiaの機能を追加するために、**ethers**および **@kaiachain/ethers-ext**パッケージをインポートする。

  ```js SignMsgWithMultiSigExample.js focus=1:3
  ```

  ---

  送信者の**address**と**private key**、およびすべての**重み付きマルチシグ**秘密鍵を定義する。

  ```js SignMsgWithMultiSigExample.js focus=5:9
  ```

  ---

  指定された**kairos** testnet URLでプロバイダを設定します。 エーテルにおけるプロバイダーとは、ブロックチェーンのデータにアクセスするための読み取り専用の抽象化されたものである。

  ```js SignMsgWithMultiSigExample.js focus=11
  ```

  ---

  また、プロバイダのURLを**kairos**から**quicknode**に変更することができます。

  ```js SignMsgWithMultiSigExample.js focus=11
  const { ethers } = require("ethers");

  const { Wallet } = require("@kaiachain/ethers-ext/v6");

  const senderAddr = "0x82c6a8d94993d49cfd0c1d30f0f8caa65782cc7e";
  const senderPriv = "0xa32c30608667d43be2d652bede413f12a649dd1be93440878e7f712d51a6768a";
  const senderNewPriv1 = "0xa32c30608667d43be2d652bede413f12a649dd1be93440878e7f712d51a6768a";
  const senderNewPriv2 = "0x0e4ca6d38096ad99324de0dde108587e5d7c600165ae4cd6c2462c597458c2b8";
  const senderNewPriv3 = "0xc9668ccd35fc20587aa37a48838b48ccc13cf14dd74c8999dd6a480212d5f7ac";

  const provider = new ethers.JsonRpcProvider("https://public-en-kairos.node.kaia.io");
  const wallet1 = new Wallet(senderAddr, senderNewPriv1, provider);
  const wallet2 = new Wallet(senderAddr, senderNewPriv2, provider);
  const wallet3 = new Wallet(senderAddr, senderNewPriv3, provider);

  async function main() {
    const msg = "hello";
    const msghex = ethers.hexlify(ethers.toUtf8Bytes(msg));
    const sig = await wallet3.signMessage(msg);
    console.log({ senderAddr, msg, msghex, sig });

    const addr1 = ethers.verifyMessage(msg, sig);
    console.log("recoveredAddr lib", addr1, addr1.toLowerCase() === wallet3.address.toLowerCase());

    const addr2 = await provider.send("klay_recoverFromMessage", [senderAddr, msghex, sig, "latest"]);
    console.log("recoveredAddr rpc", addr2, addr2.toLowerCase() === wallet3.address.toLowerCase());
  }

  main().catch(console.error);
  ```

  ---

  **weight multi-sig**秘密鍵とプロバイダを使って3つのウォレットを作成する。

  ```js SignMsgWithMultiSigExample.js focus=12:14
  ```

  ---

  署名され、復元されるメッセージを定義する

  ```js SignMsgWithMultiSigExample.js focus=17
  ```

  ---

  送信者の**wallet3**でメッセージに署名する。

  <CH.Code>
    ```js SignMsgWithMultiSigExample.js focus=18:20
    ```

    ---

    ```zsh output
    {
      senderAddr: '0x82c6a8d94993d49cfd0c1d30f0f8caa65782cc7e',
      msg: 'hello',
      msghex: '0x68656c6c6f',
      sig：'0x4bb3156dfd3349b974222b9ed754a3835802d920b63e8c07f41a75a174ce99d92a70d62e7a4b30d18599de61a882c59c0fd726883e3ce9955f8d5f60ce5b65211c'
    }
    ```
  </CH.Code>

  ---

  `ethers.verifyMessage`を使用して署名されたメッセージからアドレスを復元する。

  <CH.Code>
    ```js SignMsgWithMultiSigExample.js focus=22:23
    ```

    ---

    ```zsh output
    recoveredAddr lib 0xe15Cd70A41dfb05e7214004d7D054801b2a2f06b true
    ```
  </CH.Code>

  ---

  `klay_recoverFromMessage` を使って署名されたメッセージからアドレスを復元する。

  <CH.Code>
    ```js SignMsgWithMultiSigExample.js focus=25:26
    ```

    ---

    ```zsh output
    recoveredAddr rpc 0xe15cd70a41dfb05e7214004d7d054801b2a2f06b true
    ```
  </CH.Code>
</CH.Spotlight>
